--- a/xv6-P3-MemoryManagement/README
+++ b/xv6-P3-MemoryManagement/README
@@ -1,48 +1,68 @@
-xv6 is a re-implementation of Dennis Ritchie's and Ken Thompson's Unix
-Version 6 (v6).  xv6 loosely follows the structure and style of v6,
-but is implemented for a modern x86-based multiprocessor using ANSI C.
+Colin Samplawski
+Sam Mergendahl
+NetID: csamplawski
+NetID: smergendahl
+CS Login: samplawski
+CS Login: mergenda
+CS 537 Fall 2015 DIS 302
 
-ACKNOWLEDGMENTS
+Null Pointer Part:
+We made the user address space start at address 0x1000 instead of 0x0. That way
+if a user process tried to dereference a NULL pointer, they would be attempting to
+read memory at address 0x0. Since this address is no longer in the user address
+space, the kernel will kill the process. We did this editing the Makefile for user
+processes so the code is loaded in at address 0x1000. Then a small change is needed
+in exec.c in order to start loading the memory there. To make sure that a syscall
+can handle a null pointer, we added a function that verifies the addresses that
+are passed to fetchint and fetchstr, and returns -1 if the address is outside the
+user address space.
 
-xv6 is inspired by John Lions's Commentary on UNIX 6th Edition (Peer
-to Peer Communications; ISBN: 1-57398-013-7; 1st edition (June 14,
-2000)). See also http://pdos.csail.mit.edu/6.828/2007/v6.html, which
-provides pointers to on-line resources for v6.
+Stack Part:
+To move the stack to the bottom we just changed the call to allocuvm in exec that 
+was there to build stack to alloc memory at bottom of the address space instead of
+after the code portion of memory. Then some code in copyuvm needed to be changed 
+in order to copy this new stack arrangement correctly. 
 
-xv6 borrows code from the following sources:
-    JOS (asm.h, elf.h, mmu.h, bootasm.S, ide.c, console.c, and others)
-    Plan 9 (bootother.S, mp.h, mp.c, lapic.c)
-    FreeBSD (ioapic.c)
-    NetBSD (console.c)
+We added to fields to proc.h in order to keep track of the size of the heap and 
+stack, as well as copy those fields in when fork is called. Using these fields,
+we were able to keep track of the sizes of the heap and stack to insure that 
+would never grow into each other. We did it so that there is invalid memory 
+underneath the heap that moves down as the heap grows. If the stack tries to
+grow into this area, the process is killed.
 
-The following people made contributions:
-    Russ Cox (context switching, locking)
-    Cliff Frey (MP)
-    Xiao Yu (MP)
-    Nickolai Zeldovich
-    Austin Clements
+In order to grow the stack as a process needs, we added code to be ran after a page fault. 
+This happens in trap.c, so at a page fault, we attempt to alloc a page worth of
+memory for the stack. If that can't be done, then there isn't enough memory left,
+so the process is just killed.
 
-In addition, we are grateful for the patches contributed by Greg
-Price, Yandong Mao, and Hitoshi Mitake.
+User programs for testing:
+null.c - Simply dereferences a NULL pointer. Should seg fault
 
-The code in the files that constitute xv6 is
-Copyright 2006-2007 Frans Kaashoek, Robert Morris, and Russ Cox.
+null-syscall.c - Passes a NULL pointer to open(), then prints the return 
+value of open(), which should be -1.
 
-ERROR REPORTS
+badaddress-syscall.c - A integer is created on the heap, and a pointer to an  address below 
+the address of the new int is passed to open(). The return value is then printed,
+which should be -1.
 
-If you spot errors or have suggestions for improvement, please send
-email to Frans Kaashoek and Robert Morris (kaashoek,rtm@csail.mit.edu). 
+small-stack.c - A few ints are allocated on the stack by a function, and their addresses
+are then printed out (in decimal).
 
-BUILDING AND RUNNING XV6
+stack-growth.c - A few ints are allocated on the stack by a series of functions, 
+and their addresses are then printed out (in decimal). These addresses should
+show that more than one page is being used.
 
-To build xv6 on an x86 ELF machine (like Linux or FreeBSD), run "make".
-On non-x86 or non-ELF machines (like OS X, even on x86), you will
-need to install a cross-compiler gcc suite capable of producing x86 ELF
-binaries.  See http://pdos.csail.mit.edu/6.828/2007/tools.html.
-Then run "make TOOLPREFIX=i386-jos-elf-".
+fault.c - A integer is created on the heap, and at an address below the address of 
+the new int, we attempt to access memory there. This will cause a seg fault.
 
-To run xv6, you can use Bochs or QEMU, both PC simulators.
-Bochs makes debugging easier, but QEMU is much faster. 
-To run in Bochs, run "make bochs" and then type "c" at the bochs prompt.
-To run in QEMU, run "make qemu".
+malloc.c - A few ints are created on the heap, using a malloc. And then their addresses
+are printed out (in decimal).
 
+overcommit-stack.c - We wrote a function that recursively calculates the nth 
+Fibonacci number. We passed it a very high value for n (100000). This causes 
+many, many stack frames to be made for the recursive calls to the function.
+Then a seg fault occurs.
+
+overcommit-heap.c - This program has an infinite loop that allocates  an int on the
+heap at every iteration. We check the return value until it is NULL (meaning no more
+memory is available), and print anerror and exit.
